feat(auth): JWT role claim 추가 + 필터에서 ROLE 권한 매핑